FW-4 Implement CMS crud services
